--- a/userbot/Dockerfile
+++ b/userbot/Dockerfile
@@ -1,21 +1,23 @@
 FROM python:3.11-slim
 
-# Установка системных зависимостей
-RUN apt-get update && apt-get install -y \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
-
 WORKDIR /app
 
-# Копирование и установка зависимостей
+# Установка системных зависимостей
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Копируем requirements.txt
 COPY requirements.txt .
+
+# Устанавливаем Python зависимости
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Копирование кода
+# Копируем исходный код
 COPY src/ .
 
-# Создание директорий для сессий и логов
-RUN mkdir -p /app/session /app/logs
+# Создаем директории для логов и сессий
+RUN mkdir -p /app/logs /app/session
 
-# Запуск бота
-CMD ["python", "-u", "bot.py"]
+# Команда запуска
+CMD ["python", "bot.py"]
