--- a/userbot/requirements.txt
+++ b/userbot/requirements.txt
@@ -1,6 +1,17 @@
-python-telegram-bot==20.7
+# Зависимости для userbot Docker контейнера
+# Минимальный набор для продакшена
+
+# Telegram API клиент
+telethon==1.34.0
+
+# HTTP клиент для отправки в n8n
+aiohttp==3.9.3
+
+# Переменные окружения
 python-dotenv==1.0.1
-asyncpg==0.29.0
-sqlalchemy==2.0.25
-alembic==1.13.1
+
+# Работа с временными зонами
 pytz==2024.1
+
+# JSON обработка (входит в стандартную библиотеку, но явно указываем для ясности)
+# Асинхронные операции (входит в Python 3.7+)
