Обновлен README.md с текущим статусом проекта и завершением Stage 2 интеграции с N8N. Исправлен путь webhook в n8n workflows на "telegram-posts". Обновлен код обработки данных в n8n для универсального доступа к данным. Проведено полное End-to-End тестирование системы, подтверждено успешное выполнение всех компонентов. Документированы достижения и готовность к Stage 3: AI Processing & Topic-based Filtering.

--- a/n8n/workflows/telegram-digest-workflow-configurable.json
+++ b/n8n/workflows/telegram-digest-workflow-configurable.json
@@ -4,7 +4,7 @@
     {
       "parameters": {
         "httpMethod": "POST",
-        "path": "telegram-digest",
+        "path": "telegram-posts",
         "options": {}
       },
       "name": "Webhook - Receive Posts",
