Обновлены настройки AI в n8n-config.env для активации AI обработки и изменения порога качества. Добавлен тестовый скрипт test_ai_workflow_real.py для проверки AI обработки с реальными данными. Обновлен ROADMAP.md с завершением Stage 3: AI Processing & Topic-based Filtering. Обновлен n8n workflow для поддержки нового формата данных и интеграции с OpenAI.

--- a/n8n-config.env
+++ b/n8n-config.env
@@ -25,10 +25,10 @@ DEBUG_MODE=false
 # =================================
 
 # Enable AI processing pipeline
-ENABLE_AI_PROCESSING=false
+ENABLE_AI_PROCESSING=true
 
 # AI quality threshold (0.0 - 1.0)
-QUALITY_THRESHOLD=0.7
+QUALITY_THRESHOLD=0.6
 
 # Similarity threshold for duplicate detection
 SIMILARITY_THRESHOLD=0.8
@@ -37,7 +37,10 @@ SIMILARITY_THRESHOLD=0.8
 AI_PROVIDER=openai
 
 # AI Model name
-AI_MODEL=gpt-4
+AI_MODEL=gpt-4o-mini
+
+# OpenAI API Key (copy from main .env file)
+# OPENAI_API_KEY=your_openai_key_here
 
 # Maximum summary length in characters
 SUMMARY_MAX_LENGTH=150
