Добиваемся правильной выдачи Добавлены новые настройки вебхука в n8n-config.env для интеграции с Telegram. Обновлен код в main.py для улучшения инициализации настроек, добавлены новые параметры конфигурации. Обновлен bot.py для диагностики и загрузки переменных окружения, а также для получения метаданных каналов из Backend API. Удален устаревший n8n workflow telegram-digest-workflow.json.

--- a/n8n-config.env
+++ b/n8n-config.env
@@ -52,6 +52,10 @@ SUMMARY_MAX_LENGTH=150
 # Backend API URL
 BACKEND_API_URL=http://localhost:8000
 
+# Webhook Configuration - читается из основного .env
+N8N_WEBHOOK_URL=http://localhost:5678/webhook/telegram-posts
+N8N_WEBHOOK_PATH=telegram-posts
+
 # Enable actual saving to backend (false = logging only)
 ENABLE_BACKEND_SAVE=false
 
