--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,5 @@ uvicorn[standard]==0.24.0
 SQLAlchemy==2.0.23
 python-dotenv==1.0.0
 python-multipart==0.0.6
-pydantic==2.5.0 
+pydantic==2.5.0
+telethon==1.35.0 
