--- a/frontend/admin-panel/package.json
+++ b/frontend/admin-panel/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@mui/x-data-grid": "^8.5.0",
+    "@mui/x-date-pickers": "^7.23.2",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
