--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-telegram-bot==20.7
 # Database ORM и миграции
 sqlalchemy==2.0.23
 asyncpg==0.29.0
+psycopg2-binary==2.9.9
 alembic==1.13.1
 
 # HTTP клиент
