--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,4 +5,5 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 python-multipart==0.0.6
 pydantic==2.5.0
-telethon==1.35.0 
+telethon==1.35.0
+aiohttp==3.9.1 
