--- a/ai_services/requirements.txt
+++ b/ai_services/requirements.txt
@@ -14,4 +14,8 @@ tenacity>=8.2.0
 loguru>=0.7.2
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
-httpx>=0.26.0 
+httpx>=0.26.0
+# Celery dependencies
+celery[redis]>=5.3.4
+flower>=2.0.1
+redis>=5.0.1 
