--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,4 +6,7 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 pydantic==2.5.0
 telethon==1.35.0
-aiohttp==3.9.1 
+aiohttp==3.9.1
+httpx==0.25.2
+celery==5.3.6
+redis==5.0.1 
