Добавлено новое хранилище сессий для userbot в docker-compose.yml и обновлены модели данных в main.py: добавлены поля title, last_parsed и error_count для класса Channel. Эти изменения улучшают управление сессиями и расширяют функциональность модели данных.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./backend/logs:/app/logs
+      - ./userbot/session:/userbot/session
     networks:
       - morningstar_network
 
