Добавлен новый сервис summarization-worker в docker-compose.yml для асинхронной обработки саммаризации постов. Обновлены зависимости в requirements.txt для поддержки новой версии Celery и Redis. Оптимизированы функции в celery_app.py и tasks.py для улучшения обработки постов с использованием асинхронных методов. Реализована логика обработки ошибок и улучшена документация по AI сервисам. Обновлены модели данных и добавлены новые эндпоинты для работы с результатами AI сервисов.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,6 +129,26 @@ services:
     networks:
       - morningstar_network
 
+  summarization-worker:
+    build: ./ai_services
+    container_name: morningstar_summarization_worker
+    env_file:
+      - .env
+    volumes:
+      - ./ai_services:/app/ai_services
+    command: >
+      sh -c "
+        # Ожидаем Redis и Backend
+        ./entrypoint.sh wait-for-redis &&
+        ./entrypoint.sh wait-for-backend &&
+        # Запускаем worker ТОЛЬКО для очереди суммаризации
+        celery -A celery_app worker -l info --concurrency=2 -Q summarization"
+    depends_on:
+      - redis
+      - backend
+    networks:
+      - morningstar_network
+
   # Frontend (React + Nginx)
   frontend:
     build:
