--- a/ai_services/requirements.txt
+++ b/ai_services/requirements.txt
@@ -16,6 +16,7 @@ pytest>=8.0.0
 pytest-asyncio>=0.23.0
 httpx>=0.26.0
 # Celery dependencies
-celery[redis]>=5.3.4
+celery==5.4.0
 flower>=2.0.1
-redis>=5.0.1 
+redis==5.0.7
+requests 
