Обновлен docker-compose.yml для корректного указания контекста сборки и добавления схемы как единого источника истины. Исправлен Dockerfile для правильного копирования файлов и установки зависимостей. Внесены изменения в CategorizationServiceCelery и SummarizationServiceCelery для работы с атрибутами постов. Добавлены новые функции для получения кастомных настроек саммаризации ботов. Исправлены статусы в запросах к базе данных с 'success' на 'completed'. Обновлены настройки в SettingsManager для получения max_summary_length из системных настроек.

--- a/ai_services/Dockerfile
+++ b/ai_services/Dockerfile
@@ -11,15 +11,18 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # Копирование requirements.txt и установка зависимостей
-COPY requirements.txt .
+COPY ai_services/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Копирование entrypoint скрипта
-COPY entrypoint.sh /app/entrypoint.sh
+COPY ai_services/entrypoint.sh /app/entrypoint.sh
 RUN chmod +x /app/entrypoint.sh
 
 # Копирование всех файлов AI сервисов
-COPY . .
+COPY ai_services/ /app/
+
+# Копирование schemas.py из корня проекта (единый источник истины) - ПОСЛЕ копирования AI файлов
+COPY schemas.py /app/schemas.py
 
 # Создание директории для логов
 RUN mkdir -p /app/logs
