--- a/userbot/requirements.txt
+++ b/userbot/requirements.txt
@@ -15,3 +15,6 @@ pytz==2024.1
 
 # JSON обработка (входит в стандартную библиотеку, но явно указываем для ясности)
 # Асинхронные операции (входит в Python 3.7+)
+ 
+# Pydantic (общие схемы)
+pydantic==2.8.2
