--- a/frontend/admin-panel/nginx.conf
+++ b/frontend/admin-panel/nginx.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
     server_name localhost;
+    # Docker embedded DNS; важно для пере-разрешения имени контейнера backend после его рестартов
+    resolver 127.0.0.11 ipv6=off valid=30s;
     
     # Gzip compression
     gzip on;
@@ -10,6 +12,11 @@ server {
     # API proxy
     location /api/ {
         proxy_pass http://backend:8000;
+        proxy_connect_timeout 3s;
+        proxy_read_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
